refactor(mapping): remove the BeanUtils.copyProperty and return the domain models
refs: TMI-414